src/objects/ADvendio__Mapping_BA__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__SurchargeB3__c</fullName>
        <label>Surcharge (B3)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeSalesPrice__c</fullName>
        <label>SurchargeSalesPrice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPaymentDaysNet__c</fullName>
        <label>Terms Of Payment Days Net</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPaymentText__c</fullName>
        <label>Terms Of Payment Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ThirdPartyCommission__c</fullName>
        <label>Third Party Commission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UnitPrice__c</fullName>
        <label>Unitprice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATExempt__c</fullName>
        <label>VAT Exempt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATTotal__c</fullName>
        <label>VAT Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATType__c</fullName>
        <label>VAT Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__YourReferenceNumber__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RG_Empfaenger_P7S1_Konzernmitglied__c</fullName>
        <label>RG Empfänger P7S1 Konzernmitglied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Adservertyp__c</fullName>
        <label>Adservertyp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <label>Auftragstyp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <label>Mediagattung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Differenzierung__c</fullName>
        <label>Mediagattungs-Differenzierung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Segment_Name__c</fullName>
        <label>Mediagattungs-Segment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Segment__c</fullName>
        <label>Mediagattungs-Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Naturalrabatt__c</fullName>
        <label>Naturalrabatt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PartnerId__c</fullName>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Preisliste__c</fullName>
        <label>Preisliste</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Steuerkennzeichen__c</fullName>
        <label>Steuerkennzeichen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraeger__c</fullName>
        <label>Werbeträger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Zahlungsbedingungen_SAP__c</fullName>
        <label>Zahlungsbedingungen (SAP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping BA</label>
</CustomObject>